--- a/SNM/asset/style/style.css
+++ b/SNM/asset/style/style.css
@@ -1,20 +1,41 @@
 body{
-    background-color: #181823; 
+    background-image: url("/background.png");
     color: #E9F8F9;
+}
+.container{
+    background-color: #181823; 
 }
 #left_menu{
     border: 2px solid gray;
     padding: 30px 0px;
 }
+#home{
+    border-right: 2px solid gray;
+}
 #home h4{
     border-bottom: 1px solid white;
-}
-#search{
-    padding-bottom: 20px;
 }
 .card{
     margin: 10px;
 }
 .show{
     padding: 30px;
+}
+.nome_traccia{
+    font-size: 16px;
+}
+
+#searchMenu{
+    border: 2px solid white; 
+    border-top: 0px
+}
+#searchMenu h5{
+    margin-top: 5px;
+}
+#search, #searchParameters{
+    margin: 10px 0px;
+}
+#btnSearch{
+    margin: 5px 0px; 
+    width:80%;
 }
