--- a/SNM/asset/style/style.css
+++ b/SNM/asset/style/style.css
@@ -14,6 +14,7 @@ body{
 }
 #home h4{
     border-bottom: 1px solid white;
+    margin: 5px 0;
 }
 .card{
     margin: 10px;
@@ -25,6 +26,8 @@ body{
 }
 .link{
     cursor: pointer;
+    color: black;
+    font-weight: bold;
 }
 .card img{
     margin-top: 5px;
