--- a/SNM/asset/style/style.css
+++ b/SNM/asset/style/style.css
@@ -4,13 +4,11 @@ body{
 }
 .container{
     background-color: #181823; 
+    border: 2px solid white;
 }
 #left_menu{
-    border: 2px solid gray;
+    border-right: 2px solid white;
     padding: 30px 0px;
-}
-#home{
-    border-right: 2px solid gray;
 }
 #home h4{
     border-bottom: 1px solid white;
