--- a/SNM/asset/style/style.css
+++ b/SNM/asset/style/style.css
@@ -5,10 +5,15 @@ body{
 .external-container{
     background-color: #181823; 
     border: 2px solid white;
+    border-bottom: 0px solid white;
 }
 #left_menu{
     border-right: 2px solid white;
     padding: 30px 0px;
+    border-bottom: 2px solid white
+}
+#home{
+    border-bottom: 2px solid white;
 }
 #home h4{
     border-bottom: 1px solid white;
@@ -23,10 +28,16 @@ body{
     overflow: auto;
 }
 .card:hover{
-    background: lightskyblue;
+    background: lightcyan;
+}
+.cursor{
+    cursor: pointer;
+    transition: color 0.5s ease-out 100ms;
+}
+.cursor:hover{
+    color:blue;
 }
 .link{
-    cursor: pointer;
     color: black;
     font-weight: bold;
 }
@@ -34,7 +45,13 @@ body{
     margin-top: 5px;
 }
 .show{
-    padding: 30px;
+    margin: 20px 0;
+    padding: 20px;
+    width: 90%;
+    transition: opacity 0.3s ease-out 100ms;
+}
+.show:hover{
+    opacity: 80%;
 }
 .card-title{
     font-size: 16px;
@@ -54,7 +71,9 @@ body{
     margin: 5px 0px; 
     width:80%;
 }
-
+#searchbutton{
+    margin-top: 0;
+}
 
 #userForm{
    padding: 20px;
